[package]
name = "rl001"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
insta = { version = "1.35.1", features = ["yaml"] }